--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/ibm.css">
 
   <link rel="stylesheet" href="fonts/gotham/stylesheet.css">
 
@@ -141,8 +141,8 @@
     <!-- Result Modal -->
     <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
       <!-- <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable"> -->
-      <div class="modal-dialog modal-dialog-centered modal-xl">
-        <div class="modal-content">
+      <div class="modal-dialog modal-dialog-centered modal-xl" id="resultModal-dialog">
+        <div class="modal-content" id="resultModal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="resultModalLabel">Modal title</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -244,9 +244,9 @@
   <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
 
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+  <script src="js/dom-to-image.js"></script>
+  <script src="js/main.js"></script>
 
-  <script type="module" src="js/main.js"></script>
     
 </body>
 </html>
