--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,7 @@
         Departamento de Desarrollo <em>--></em> Oficina de AI
       </p>
 
-      <p class="p-guia"><i>El Departamento de Desarrollo tiene dos Secciones y una Oficina (que es de menor nivel jerárquico).</i></p>
+      <p class="p-guia"><i>Del Departamento de Desarrollo dependen dos Secciones y una Oficina (que es de menor nivel jerárquico).</i></p>
 
       <h3>Definir asesorías</h3>
 
