puppeteer + image render in backend

--- a/public/index.html
+++ b/public/index.html
@@ -209,9 +209,9 @@
 
       <h3>Definir asesorías</h3>
 
-      <p class="p-guia">Se utiliza el símbolo <span class="inline-code">a></span></p>
+      <p class="p-guia">Se utiliza el símbolo <span class="inline-code">a:</span></p>
 
-      <p class="block-code">Gerencia de Finanzas <em>a></em> Asesoría Legal</p>
+      <p class="block-code">Gerencia de Finanzas <em>a:</em> Asesoría Legal</p>
 
       <p class="p-guia"><i>El gerente de Finanzas recibe asesoría en materia legal.</i></p>
 
