--- a/public/backendrender/index.html
+++ b/public/backendrender/index.html
@@ -21,20 +21,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="fonts/ibm.css">
+  <link rel="stylesheet" href="../fonts/ibm.css">
 
-  <link rel="stylesheet" href="fonts/gotham/stylesheet.css">
+  <link rel="stylesheet" href="../fonts/gotham/stylesheet.css">
 
-  <link rel="stylesheet" href="css/colors.css">
-  <link rel="stylesheet" href="css/graph.css">
-  <link rel="stylesheet" href="css/general.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/splash.css">
-  <link rel="stylesheet" href="css/guia.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/modal.css">
-  <link rel="stylesheet" href="css/loading.css">
-  <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="../css/colors.css">
+  <link rel="stylesheet" href="../css/graph.css">
+  <link rel="stylesheet" href="../css/general.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/splash.css">
+  <link rel="stylesheet" href="../css/guia.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/modal.css">
+  <link rel="stylesheet" href="../css/loading.css">
+  <link rel="stylesheet" href="../css/mobile.css">
 
 
   <!-- ROBOTS -->
@@ -116,7 +116,7 @@
   
         <form>
           <div class="form-group">
-            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a: Asesoría legal"></textarea>
+            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a> Asesoría legal"></textarea>
           </div>
           <!-- <div id="button" class="form-item btn btn-primary btn-form" onclick="graphButton()">Graficar</div> -->
           <div id="button" class="form-item btn btn-primary btn-form">Graficar</div>
@@ -245,8 +245,8 @@
   <script src="/__/firebase/init.js"></script>
 
 
-  <script src="js/dom-to-image.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/dom-to-image.js"></script> -->
+  <script src="./main.js"></script>
 
     
 </body>
