--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
   
         <form>
           <div class="form-group">
-            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a> Asesoría legal"></textarea>
+            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a: Asesoría legal"></textarea>
           </div>
           <!-- <div id="button" class="form-item btn btn-primary btn-form" onclick="graphButton()">Graficar</div> -->
           <div id="button" class="form-item btn btn-primary btn-form">Graficar</div>
@@ -209,9 +209,9 @@
 
       <h3>Definir asesorías</h3>
 
-      <p class="p-guia">Se utiliza el símbolo <span class="inline-code">a></span></p>
+      <p class="p-guia">Se utiliza el símbolo <span class="inline-code">a:</span></p>
 
-      <p class="block-code">Gerencia de Finanzas <em>a></em> Asesoría Legal</p>
+      <p class="block-code">Gerencia de Finanzas <em>a:</em> Asesoría Legal</p>
 
       <p class="p-guia"><i>El gerente de Finanzas recibe asesoría en materia legal.</i></p>
 
