--- a/public/index.html
+++ b/public/index.html
@@ -21,20 +21,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="fonts/ibm.css">
+  <link rel="stylesheet" href="../fonts/ibm.css">
 
-  <link rel="stylesheet" href="fonts/gotham/stylesheet.css">
+  <link rel="stylesheet" href="../fonts/gotham/stylesheet.css">
 
-  <link rel="stylesheet" href="css/colors.css">
-  <link rel="stylesheet" href="css/graph.css">
-  <link rel="stylesheet" href="css/general.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/splash.css">
-  <link rel="stylesheet" href="css/guia.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/modal.css">
-  <link rel="stylesheet" href="css/loading.css">
-  <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="../css/colors.css">
+  <link rel="stylesheet" href="../css/graph.css">
+  <link rel="stylesheet" href="../css/general.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/splash.css">
+  <link rel="stylesheet" href="../css/guia.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/modal.css">
+  <link rel="stylesheet" href="../css/loading.css">
+  <link rel="stylesheet" href="../css/mobile.css">
 
 
   <!-- ROBOTS -->
@@ -116,10 +116,9 @@
   
         <form>
           <div class="form-group">
-            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a: Asesoría legal"></textarea>
+            <textarea class="form-item form-control" id="textarea" rows="20" placeholder="raiz Gerencia General&#013Gerencia General -> Gerencia de Ventas&#013Gerencia General -> Gerencia de Ventas&#013Gerencia de Ventas -> [Departamento Nacional, Departamento Exportaciones]&#013Gerencia General a> Asesoría legal"></textarea>
           </div>
-          <!-- <div id="button" class="form-item btn btn-primary btn-form" onclick="graphButton()">Graficar</div> -->
-          <div id="button" class="form-item btn btn-primary btn-form">Graficar</div>
+          <div class="form-item btn btn-primary btn-form" onclick="graphButton()">Graficar</div>
         </form>
 
       </div>
@@ -140,7 +139,6 @@
 
     <!-- Result Modal -->
     <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-      <!-- <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable"> -->
       <div class="modal-dialog modal-dialog-centered modal-xl" id="resultModal-dialog">
         <div class="modal-content" id="resultModal-content">
           <div class="modal-header">
@@ -152,8 +150,6 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <!-- <button type="button" class="btn btn-primary" id='openInNewTabButton' onclick="newTab()">Abrir en otra pestaña</button> -->
-            <!-- <a class="btn btn-primary btn-modal" id='openInNewTabButton'>Abrir en otra pestaña</a> -->
             <a class="btn btn-primary btn-modal" id='downloadButton'>Descargar</a>
           </div>`
         </div>
@@ -220,10 +216,6 @@
 
   </section>
 
-  <div class="graph" id='graphSketch'>
-  </div>
-  <img src="images/dashed-line.png" alt="" style="display: none;">
-
   <footer>
 
     <p>Desarrollado por Nicolás Acosta</p>
@@ -244,8 +236,6 @@
 
   <script src="/__/firebase/init.js"></script>
 
-
-  <script src="js/dom-to-image.js"></script>
   <script src="js/main.js"></script>
 
     
