--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 
   <meta charset="UTF-8">
@@ -21,20 +21,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="../fonts/ibm.css">
+  <link rel="stylesheet" href="fonts/ibm.css">
+  <link rel="stylesheet" href="fonts/gotham/stylesheet.css">
 
-  <link rel="stylesheet" href="../fonts/gotham/stylesheet.css">
-
-  <link rel="stylesheet" href="../css/colors.css">
-  <link rel="stylesheet" href="../css/graph.css">
-  <link rel="stylesheet" href="../css/general.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/splash.css">
-  <link rel="stylesheet" href="../css/guia.css">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/modal.css">
-  <link rel="stylesheet" href="../css/loading.css">
-  <link rel="stylesheet" href="../css/mobile.css">
+  <link rel="stylesheet" href="css/colors.css">
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/splash.css">
+  <link rel="stylesheet" href="css/guia.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/modal.css">
+  <link rel="stylesheet" href="css/loading.css">
+  <link rel="stylesheet" href="css/mobile.css">
 
 
   <!-- ROBOTS -->
@@ -68,7 +66,6 @@
 <body>
 
   <header id="header">
-    <!-- <h1>OrgaMapp</h1> -->
 
     <h2 class="beta">beta</h2>
 
@@ -77,7 +74,6 @@
     </nav>
     <div class="social">
       <a class="social-icon" target="_blank" href="https://github.com/NicoAcosta/orgamapp" id='git'><i class="fab fa-github"></i></a>
-      <!-- <p>View on Github</p> -->
     </div>
   </header>
 
